--- a/dashboard/src/app/app.component.html
+++ b/dashboard/src/app/app.component.html
@@ -37,7 +37,7 @@
           <li><a [href]="_sys.DASHBOARD_LINK">Tableau de bord</a></li>
           <li><a routerLink="/help">Aide</a></li>
           <li><a routerLink="/policy">Confidentialité</a></li>
-          <li><a href="https://campus.insa-cvl.fr">Site Campus</a></li>
+          <li><a href="https://campus.insa-cvl.org">Site Campus</a></li>
         </ul>
       </mat-card-content>
     </mat-card>
