--- a/dashboard/src/app/auth/auth.component.html
+++ b/dashboard/src/app/auth/auth.component.html
@@ -13,7 +13,7 @@
         <div id="authFormulaire">
           <div class="text-center">
           <span class="p-b-30 txt2">
-						Connecte-toi avec les identifiants que tu as reçu par mail lors de ton inscription au SpringWEI 2019 !
+						Connecte-toi avec les identifiants que tu as reçu par mail lors de ton inscription au Sea Wei & Sun 2021 !
           </span>
           </div>
           <br/>
