--- a/src/app/first-launch/first-launch.page.html
+++ b/src/app/first-launch/first-launch.page.html
@@ -2,7 +2,7 @@
   <ion-slides #slides [options]="slideOpts" pager>
     <ion-slide class="step-one">
       <h1>Salut !</h1>
-      <p>Bienvenue dans l'application SpringWei !</p>
+      <p>Bienvenue dans l'application SeaWeiAndSun !</p>
       <ion-button (click)="next()">Faire un tour</ion-button>
       <small class="text-muted"><a (click)="ignore()">Ignorer la présentation</a></small>
     </ion-slide>
