--- a/dashboard/src/app/application/application.component.html
+++ b/dashboard/src/app/application/application.component.html
@@ -57,7 +57,7 @@
   <mat-divider></mat-divider>
   <mat-card>
     <mat-card-title>Télécharger l'application</mat-card-title>
-    <mat-card-subtitle>L'application du SpringWEI 2019 est disponible sur Android et iOS !</mat-card-subtitle>
+    <mat-card-subtitle>L'application du Sea Wei & Sun 2021 est disponible sur Android et iOS !</mat-card-subtitle>
     <mat-card-content>
       <div class="row">
         <a class="col text-center" (click)="download('android')" href="https://play.google.com/store/apps/details?id=com.campus_cvl.springwei" target="_blank">
