--- a/dashboard/src/app/application/help/help.component.html
+++ b/dashboard/src/app/application/help/help.component.html
@@ -4,7 +4,7 @@
       <mat-card-title>Aide</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p>Bienvenue dans le tableau de bord de l'application SpringWEI ! Ici, tu pourras gérer ton compte, ton bungalow et aussi télécharger l'application qui te servira durant le weekend.</p>
+      <p>Bienvenue dans le tableau de bord de l'application Sea Wei & Sun ! Ici, tu pourras gérer ton compte, ton bungalow et aussi télécharger l'application qui te servira durant le weekend.</p>
       <p>Si tu as des questions, cette page est là y répondre. Si ta question ne figure pas parmi la liste ci-dessous, nous t'invitons à contacter un membre du BDE sur ton campus.</p>
       <br/><p>Ton BDE adoré <3</p>
     </mat-card-content>
@@ -22,7 +22,7 @@
 
     <p>Il y a deux possibilités : </p>
     <ul>
-      <li><strong>Tu ne t'es pas encore inscrit au weekend : </strong>retrouve rapidement le BDE dans le hall de ton campus et donne leur le formulaire d'inscription rempli ainsi que le chèque d'inscription.</li>
+      <li><strong>Tu ne t'es pas encore inscrit au weekend : </strong>retrouve rapidement le BDE de ton campus et donne leur le formulaire d'inscription rempli ainsi que le chèque d'inscription.</li>
       <li><strong>Tu t'es déjà inscrit au weekend : </strong>tu recevras bientôt un mail. Si ce n'est toujours pas le cas, vérifie tes courriers indésirables ou, le cas échant, signale-le au BDE dans ton campus.</li>
     </ul>
   </mat-expansion-panel>
@@ -141,7 +141,7 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
 
-    <p>Le Week-End d'Intégration se déroulera du 27 au 29 septembre.</p>
+    <p>Le Week-End d'Intégration se déroulera du 24 au 26 septembre.</p>
 
   </mat-expansion-panel>
   <mat-expansion-panel>
@@ -183,12 +183,14 @@
 
     <p>Vous dormirez dans des bungalows. Nous te conseillons donc de prendre :</p>
     <ul>
-      <li>Vêtements de rechange</li>
-      <li>Sac de couchage</li>
-      <li>Maillot de bain</li>
-      <li>Serviette</li>
-      <li>Tout ce dont tu as besoin pour l'hygiène (il y a des douches): c'est important</li>
-      <li>Ton plus beau sourire</li>
+      <li>Vêtements qui ne craignent rien</li>
+      <li>Vêtements impérméables</li>
+      <li>Chaussures de rechange</li>
+      <li>Brassards (pour pas se noyer)</li>
+      <li>Duvet</li>
+      <li>Trousse de toilette</li>
+      <li>Slips et chaussettes</li>
+      <li>Bref on n'est pas ta mère</li>
     </ul>
 
   </mat-expansion-panel>
