--- a/src/app/wei/informations/informations.page (copie 1).html
+++ b/src/app/wei/informations/informations.page (copie 1).html
@@ -28,43 +28,49 @@
                     <ion-list-header>Présidents</ion-list-header>
                     <ion-item (click)="_sys.call('0695783585')">
                         <ion-avatar slot="start">
-                            <img src="assets/img/equipe/irma.jpg">
+                            <img src="assets/img/equipe/louan.png">
                         </ion-avatar>
                         <ion-label>
-                            <h2>Irma Brault</h2>
-                            <p>06 98 90 48 60</p>
+                            <h2>Louan Dubois</h2>
+                            <p>06 95 78 35 85</p>
                         </ion-label>
                     </ion-item>
                     <ion-item (click)="_sys.call('0787602529')">
                         <ion-avatar slot="start">
-                            <img src="assets/img/equipe/emile.jpg">
+                            <img src="assets/img/equipe/adrien.png">
                         </ion-avatar>
                         <ion-label>
-                            <h2>Emile Mauret</h2>
-                            <p>07 83 28 35 15</p>
+                            <h2>Adrien Misandeau</h2>
+                            <p>07 87 60 25 29</p>
                         </ion-label>
                     </ion-item>
-                    
+                    <ion-item (click)="_sys.call('0667981634')">
+                        <ion-avatar slot="start">
+                            <img src="assets/img/equipe/miveck.png">
+                        </ion-avatar>
+                        <ion-label>
+                            <h2>Miveck Peinzi</h2>
+                            <p>06 67 98 16 34</p>
+                        </ion-label>
+                    </ion-item>
 
                 </ion-list>
                 <ion-list>
                     <ion-list-header>Responsables animation</ion-list-header>
                     <ion-item>
                         <ion-avatar slot="start">
-                            <img src="assets/img/equipe/augustin.jpg">
+                            <img src="assets/img/equipe/benoit.png">
                         </ion-avatar>
                         <ion-label>
-                            <h2>Augustin Schreck</h2>
-                            <p>06 68 57 14 13</p>
+                            <h2>Benoît Ribeiro</h2>
                         </ion-label>
                     </ion-item>
                     <ion-item>
                         <ion-avatar slot="start">
-                            <img src="assets/img/equipe/theo.jpg">
+                            <img src="assets/img/equipe/david.png">
                         </ion-avatar>
                         <ion-label>
-                            <h2>Théo Biotteau</h2>
-                            <p>06 38 34 42 74</p>
+                            <h2>David Aubry</h2>
                         </ion-label>
                     </ion-item>
                 </ion-list>
@@ -72,26 +78,31 @@
                     <ion-list-header>Responsable appli</ion-list-header>
                     <ion-item>
                         <ion-avatar slot="start">
-                            <img src="assets/img/equipe/elouan.jpg">
+                            <img src="assets/img/equipe/raphael.png">
                         </ion-avatar>
                         <ion-label>
-                            <h2>Elouan Rabouin</h2>
-                            <p>06 82 42 29 83</p>
+                            <h2>Raphaël Sfeir</h2>
                         </ion-label>
                     </ion-item>
                 </ion-list>
- 
+                <ion-button (click)="_sys.goTo(_sys.CAMPUS_LINK + '/?page_id=645')" expand="full">
+                    <ion-icon name="contacts" slot="start"></ion-icon>
+                    Toute l'équipe
+                </ion-button>
             </ion-card-content>
         </ion-card>
         <ion-card>
             <ion-card-header>
-                <ion-card-title>L'application SeaWeiAndSun</ion-card-title>
+                <ion-card-title>L'application SpringWei</ion-card-title>
                 <ion-card-subtitle>Quelques infos au sujet de l'appli</ion-card-subtitle>
             </ion-card-header>
             <ion-card-content>
-                <ion-item>Version : {{version}}</ion-item>
-                <ion-item><p>Contact : </p><a href="mailto:webmaster@bde.insa-cvl.fr">webmaster@bde.insa-cvl.fr</a></ion-item>
-
+                <ion-item>Version : {{ version }}</ion-item>
+                <ion-item><a href="mailto:webmaster@bde.insa-cvl.fr">webmaster@bde.insa-cvl.fr</a></ion-item>
+                <ion-button (click)="_sys.goTo(_sys.DASHBOARD_LINK + '/policy')" expand="full">
+                    <ion-icon name="lock" slot="start"></ion-icon>
+                    Confidentialité
+                </ion-button>
             </ion-card-content>
         </ion-card>
     </ion-list>
