--- a/dashboard/src/app/application/update-bungalow/update-bungalow.component.html
+++ b/dashboard/src/app/application/update-bungalow/update-bungalow.component.html
@@ -84,7 +84,7 @@
 
 
   <div class="container" *ngIf="user.bungalow == '0'">
-    <<!--mat-horizontal-stepper labelPosition="bottom" #stepper linear="true" style="min-height: 540px;">
+    <mat-horizontal-stepper labelPosition="bottom" #stepper linear="true" style="min-height: 540px;">
       <mat-step label="Introduction">
         <div class="text-center">
           <h5>Hey !</h5>
@@ -184,7 +184,7 @@
           </div>
         </div>
       </mat-step>
-      </mat-horizontal-stepper>-->
-    <div class="alert alert-danger">L'inscription dans les bungalows est terminée ! Tu seras inscrit durant le WEI :) !</div>
+      </mat-horizontal-stepper>
+    <!--div class="alert alert-danger">L'inscription dans les bungalows est terminée ! Tu seras inscrit durant le WEI :) !</div-->
   </div>
 </ng-template>
