--- a/dashboard/src/app/application/application.component.html
+++ b/dashboard/src/app/application/application.component.html
@@ -55,7 +55,7 @@
     </div>
   </div>
   <mat-divider></mat-divider>
-  <mat-card>
+  <!--mat-card>
     <mat-card-title>Télécharger l'application</mat-card-title>
     <mat-card-subtitle>L'application du Sea Wei & Sun 2021 est disponible sur Android et iOS !</mat-card-subtitle>
     <mat-card-content>
@@ -70,5 +70,5 @@
         </a>
       </div>
     </mat-card-content>
-  </mat-card>
+  </mat-card-->
 </div>
